# CCM

./: .clang-format  .gitignore  .gitmodules  CCM.cpp  CCM.h  CCMInterpolator.cpp  CCMInterpolator.h  CMakeLists.txt  CheckCCM.cpp  CheckCCM.h  Cross_correlation.cpp  Cross_correlation.h  LICENSE  Makefile  Process.cpp  Process.h  README.md  README.txt  ccm_optimizer.cpp  macro.cxx  main.cpp  main_example.cpp  optimizer.cpp  oscar_fix.cpp  prisma_abberations.cpp  simple_example.cpp  stability_check.cpp  test.cpp  test_agata.cpp  test_interpolator.cpp  variables.h
example/: CCM.cpp  CMakeLists.txt  CheckCCM.cpp  Cross_correlation.cpp  Cross_correlation.h  Makefile  main_example.cpp
example_data/: aoq_vs_xfp.root  simple_example.root
fitter/: CMakeLists.txt  TheuerkaufPeak.hpp  test.cpp
solutions/: CMakeLists.txt
solutions/AGATA/: .gitignore  CMakeLists.txt  README.md  calcTimeEvo_AGATA.cpp  common.cpp  constructMatrices.sh  detectTimeEvo_AGATA.cpp  matTimeEvo_AGATA.cpp  simple_agata.cpp  solveTimeEvo_AGATA.cpp  solve_all_crystals.sh
solutions/PRISMA/: CMakeLists.txt  prisma_abberations.cpp
solutions/simple_example/: CMakeLists.txt  simple_example.cpp
src/: CCM.cpp  CCM.h  CCMInterpolator.cpp  CCMInterpolator.h  CMakeLists.txt  Cross_correlation.cpp  Cross_correlation.h  RegionOfInterest.cpp  RegionOfInterest.h  variables.h
